# groebnerBasis

./: .gitignore  .stylish-haskell.yaml  README.md  polynomial.cabal
app/: Main.hs
src/: Exp.hs  Lib.hs  Util.hs
test/: ExpSpec.hs  LibSpec.hs  Spec.hs  doctest.hs  doctests.hs
