name:                polynomial
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/yuchiki/polynomial#readme
license:             BSD3
license-file:        LICENSE
author:              Yuki Imai
maintainer:          yuki08281993@gmail.com
copyright:           2017 Yuki Imai
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5, parsec, containers, multiset, safe-exceptions
  default-extensions:   TupleSections, LambdaCase, MultiWayIf, BinaryLiterals, ViewPatterns,
                       ScopedTypeVariables, EmptyDataDecls, FlexibleInstances
  default-language:    Haskell2010

executable polynomial-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , polynomial
  default-language:    Haskell2010

test-suite polynomial-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , polynomial
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             doctest.hs
  build-depends:       base
                     , polynomial
                     , doctest
  ghc-options:         -rtsopts
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yuchiki/polynomial
