name:                polynomial
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/yuchiki/polynomial#readme
license:             BSD3
license-file:        LICENSE
author:              Yuki Imai
maintainer:          yuki08281993@gmail.com
copyright:           2017 Yuki Imai
category:            Web
build-type:          Custom
extra-source-files:  README.md
cabal-version:       >=1.10

custom-setup
 setup-depends:
   base,
   Cabal,
   cabal-doctest

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Exp, Util
  build-depends:       base >= 4.7 && < 5, parsec, containers, multiset, safe-exceptions, placeholders
  default-extensions:   TupleSections, LambdaCase, MultiWayIf, BinaryLiterals, ViewPatterns, ScopedTypeVariables, EmptyDataDecls, FlexibleInstances, TemplateHaskell, TypeSynonymInstances
  default-language:    Haskell2010

executable polynomial-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , polynomial
  default-language:    Haskell2010

test-suite polynomial-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       LibSpec, ExpSpec
  main-is:             Spec.hs
  build-depends:       base
                     , polynomial
                     , hspec
  default-extensions:  TupleSections, LambdaCase, MultiWayIf, BinaryLiterals, ViewPatterns, ScopedTypeVariables, EmptyDataDecls, FlexibleInstances, TemplateHaskell, TypeSynonymInstances
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             doctests.hs
  build-depends:       base
                     , doctest
                     , polynomial
                     , QuickCheck
                     , template-haskell
  default-extensions:  TupleSections, LambdaCase, MultiWayIf, BinaryLiterals, ViewPatterns, ScopedTypeVariables, EmptyDataDecls, FlexibleInstances, TemplateHaskell, TypeSynonymInstances
  ghc-options:         -rtsopts
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yuchiki/polynomial
